# Testing

./: .pdm-python  README.md  pyproject.toml  readthedocs.yaml
docs/source/: BackDown.md  Diccionario.md  Introduccion.md  conf.py  index.md
testing_data_unholster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
